--- a/cexample/.cproject
+++ b/cexample/.cproject
@@ -210,7 +210,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="test/AllTests.cpp|test/test_cppexample.cpp|test/test_cexample.cpp|test/CExampleTest.cpp|test/FooTest.cpp|src/main.cpp|asdf" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="src/cexample.c|test/AllTests.cpp|test/test_cppexample.cpp|test/test_cexample.cpp|test/CExampleTest.cpp|test/FooTest.cpp|src/main.cpp|asdf" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
